fixed deleting collections bug